tests/baselines/reference/staticIndexer.errors.txt
==== tests/cases/compiler/staticIndexer.ts (1 errors) ====
    class C {
        static [s: string]: number;
        ~~~~~~
!!! error TS1055: Modifiers cannot appear here.
    }